--- a/app/views/shared/_google_analytics.html.erb
+++ b/app/views/shared/_google_analytics.html.erb
@@ -3,6 +3,7 @@
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-122419-8']);
   _gaq.push(['_trackPageview']);
+  _gaq.push(['_trackPageLoadTime']);
 
   (function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
