--- a/public/stylesheets/lib/forms.css
+++ b/public/stylesheets/lib/forms.css
@@ -9,37 +9,98 @@
    
 -------------------------------------------------------------- */
 
-label { font-weight: bold; }
-
+label {
+  font-weight: bold;
+}
 
 /* Fieldsets */
-fieldset    { padding:1.4em; margin: 0 0 1.5em 0; border: 1px solid #ccc; }
-legend      { font-weight: bold; font-size:1.2em; }
+fieldset {
+  padding: 1.4em;
+  margin: 0 0 1.5em 0;
+  border: 1px solid #ccc;
+}
+legend {
+  font-weight: bold;
+  font-size: 1.2em;
+}
 
 /* Text fields */
-input.text, input.title   { width: 300px; margin:0.5em 0.5em 0.5em 0; }
-input.text, input.title   { border:1px solid #bbb; background:#f6f6f6; padding:5px; }
+input.text,
+input.title {
+  width: 300px;
+  margin: 0.5em 0.5em 0.5em 0;
+}
+input.text,
+input.title {
+  border: 1px solid #bbb;
+  background: #f6f6f6;
+  padding: 5px;
+}
 input.text:focus,
-input.title:focus         { border:1px solid #999; background:#fff; }
-input.title               { font-size:1.5em; }
+input.title:focus {
+  border: 1px solid #999;
+  background: #fff;
+}
+input.title {
+  font-size: 1.5em;
+}
 
 /* Textareas */
-textarea            { width: 400px; height: 250px; margin:0.5em 0.5em 0.5em 0; }
-textarea            { border:1px solid #bbb; background:#eee; padding:5px; }
-textarea:focus      { border:1px solid #999; background:#fff; }
+textarea {
+  width: 400px;
+  height: 250px;
+  margin: 0.5em 0.5em 0.5em 0;
+}
+textarea {
+  border: 1px solid #bbb;
+  background: #eee;
+  padding: 5px;
+}
+textarea:focus {
+  border: 1px solid #999;
+  background: #fff;
+}
 
 /* Select fields */
-select              { border:1px solid #ccc; background:#f6f6f6; width:200px; }
-select:focus        { border:1px solid #999; background:#fff; }
-
+select {
+  border: 1px solid #ccc;
+  background: #f6f6f6;
+  width: 200px;
+}
+select:focus {
+  border: 1px solid #999;
+  background: #fff;
+}
 
 /* Success, error & notice boxes for messages and errors. */
 .error,
-.notice, 
-.success    { padding: .8em; margin-bottom: 1em; border: 2px solid #ddd; }
-.error      { background: #FBE3E4; color: #D12F19; border-color: #FBC2C4; }
-.notice     { background: #FFF6BF; color: #817134; border-color: #FFD324; }
-.success    { background: #E6EFC2; color: #529214; border-color: #C6D880; }
-.error a    { color: #D12F19; }
-.notice a   { color: #817134; }
-.success a  { color: #529214; }
+.notice,
+.success {
+  padding: 0.8em;
+  margin-bottom: 1em;
+  border: 2px solid #ddd;
+}
+.error {
+  background: #fbe3e4;
+  color: #d12f19;
+  border-color: #fbc2c4;
+}
+.notice {
+  background: #fff6bf;
+  color: #817134;
+  border-color: #ffd324;
+}
+.success {
+  background: #e6efc2;
+  color: #529214;
+  border-color: #c6d880;
+}
+.error a {
+  color: #d12f19;
+}
+.notice a {
+  color: #817134;
+}
+.success a {
+  color: #529214;
+}
