--- a/public/stylesheets/lib/ie.css
+++ b/public/stylesheets/lib/ie.css
@@ -8,23 +8,39 @@
 -------------------------------------------------------------- */
 
 /* Make sure the layout is centered in IE5 */
-body        { text-align: center; }
-.container  { text-align: left; }
-
+body {
+  text-align: center;
+}
+.container {
+  text-align: left;
+}
 
 /* This fixes the problem where IE6 adds an extra 3px margin to
    two columns that are floated up against each other. */
 
-* html .column { overflow-x: hidden; } /* IE6 fix */
+* html .column {
+  overflow-x: hidden;
+} /* IE6 fix */
 
-.pull-1, .pull-2, .pull-3, .pull-4,
-.push-1, .push-2, .push-3, .push-4, 
-ul, ol {
+.pull-1,
+.pull-2,
+.pull-3,
+.pull-4,
+.push-1,
+.push-2,
+.push-3,
+.push-4,
+ul,
+ol {
   position: relative; /* Keeps IE6 from cutting pulled/pushed images */
 }
 
 /* Fixes incorrect styling of legend in IE6 fieldsets. */
-legend { margin-bottom:1.4em; }
+legend {
+  margin-bottom: 1.4em;
+}
 
 /* Fixes incorrect placement of numbers in ol's in IE6/7 */
-ol { margin-left:2em; }
+ol {
+  margin-left: 2em;
+}
