--- a/public/stylesheets/sprites.css
+++ b/public/stylesheets/sprites.css
@@ -1,19 +1,133 @@
-.sprite-add { display: table-cell; display: inline-block; width: 16px; height: 16px; background: url('/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png') -1px -1px no-repeat; }
-.sprite-arrow_down { display: table-cell; display: inline-block; width: 16px; height: 16px; background: url('/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png') -1px -18px no-repeat; }
-.sprite-arrow_right { display: table-cell; display: inline-block; width: 16px; height: 16px; background: url('/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png') -1px -35px no-repeat; }
-.sprite-arrow_up { display: table-cell; display: inline-block; width: 16px; height: 16px; background: url('/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png') -1px -52px no-repeat; }
-.sprite-blank { display: table-cell; display: inline-block; width: 1px; height: 1px; background: url('/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png') -1px -69px no-repeat; }
-.sprite-chart_bar { display: table-cell; display: inline-block; width: 16px; height: 16px; background: url('/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png') -1px -71px no-repeat; }
-.sprite-clean_sheet { display: table-cell; display: inline-block; width: 16px; height: 16px; background: url('/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png') -1px -88px no-repeat; }
-.sprite-comment { display: table-cell; display: inline-block; width: 16px; height: 16px; background: url('/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png') -1px -105px no-repeat; }
-.sprite-game { display: table-cell; display: inline-block; width: 16px; height: 16px; background: url('/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png') -1px -122px no-repeat; }
-.sprite-header_left { display: table-cell; display: inline-block; width: 5px; height: 5px; background: url('/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png') -1px -139px no-repeat; }
-.sprite-header_right { display: table-cell; display: inline-block; width: 5px; height: 5px; background: url('/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png') -1px -145px no-repeat; }
-.sprite-lock { display: table-cell; display: inline-block; width: 16px; height: 16px; background: url('/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png') -1px -151px no-repeat; }
-.sprite-logo { display: table-cell; display: inline-block; width: 241px; height: 38px; background: url('/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png') -1px -168px no-repeat; }
-.sprite-medal_gold_2 { display: table-cell; display: inline-block; width: 16px; height: 16px; background: url('/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png') -1px -207px no-repeat; }
-.sprite-rss { display: table-cell; display: inline-block; width: 17px; height: 17px; background: url('/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png') -1px -224px no-repeat; }
-.sprite-sort_asc { display: table-cell; display: inline-block; width: 21px; height: 4px; background: url('/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png') -1px -242px no-repeat; }
-.sprite-sort_desc { display: table-cell; display: inline-block; width: 21px; height: 4px; background: url('/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png') -1px -247px no-repeat; }
-.sprite-sort_none { display: table-cell; display: inline-block; width: 21px; height: 9px; background: url('/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png') -1px -252px no-repeat; }
-.sprite-table { display: table-cell; display: inline-block; width: 16px; height: 16px; background: url('/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png') -1px -262px no-repeat; }
+.sprite-add {
+  display: table-cell;
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  background: url("/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png") -1px -1px no-repeat;
+}
+.sprite-arrow_down {
+  display: table-cell;
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  background: url("/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png") -1px -18px no-repeat;
+}
+.sprite-arrow_right {
+  display: table-cell;
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  background: url("/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png") -1px -35px no-repeat;
+}
+.sprite-arrow_up {
+  display: table-cell;
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  background: url("/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png") -1px -52px no-repeat;
+}
+.sprite-blank {
+  display: table-cell;
+  display: inline-block;
+  width: 1px;
+  height: 1px;
+  background: url("/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png") -1px -69px no-repeat;
+}
+.sprite-chart_bar {
+  display: table-cell;
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  background: url("/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png") -1px -71px no-repeat;
+}
+.sprite-clean_sheet {
+  display: table-cell;
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  background: url("/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png") -1px -88px no-repeat;
+}
+.sprite-comment {
+  display: table-cell;
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  background: url("/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png") -1px -105px no-repeat;
+}
+.sprite-game {
+  display: table-cell;
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  background: url("/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png") -1px -122px no-repeat;
+}
+.sprite-header_left {
+  display: table-cell;
+  display: inline-block;
+  width: 5px;
+  height: 5px;
+  background: url("/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png") -1px -139px no-repeat;
+}
+.sprite-header_right {
+  display: table-cell;
+  display: inline-block;
+  width: 5px;
+  height: 5px;
+  background: url("/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png") -1px -145px no-repeat;
+}
+.sprite-lock {
+  display: table-cell;
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  background: url("/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png") -1px -151px no-repeat;
+}
+.sprite-logo {
+  display: table-cell;
+  display: inline-block;
+  width: 241px;
+  height: 38px;
+  background: url("/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png") -1px -168px no-repeat;
+}
+.sprite-medal_gold_2 {
+  display: table-cell;
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  background: url("/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png") -1px -207px no-repeat;
+}
+.sprite-rss {
+  display: table-cell;
+  display: inline-block;
+  width: 17px;
+  height: 17px;
+  background: url("/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png") -1px -224px no-repeat;
+}
+.sprite-sort_asc {
+  display: table-cell;
+  display: inline-block;
+  width: 21px;
+  height: 4px;
+  background: url("/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png") -1px -242px no-repeat;
+}
+.sprite-sort_desc {
+  display: table-cell;
+  display: inline-block;
+  width: 21px;
+  height: 4px;
+  background: url("/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png") -1px -247px no-repeat;
+}
+.sprite-sort_none {
+  display: table-cell;
+  display: inline-block;
+  width: 21px;
+  height: 9px;
+  background: url("/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png") -1px -252px no-repeat;
+}
+.sprite-table {
+  display: table-cell;
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  background: url("/images/sprites.049ef3e0b7e885804c7258e7e93a86c595ba6386.cache.png") -1px -262px no-repeat;
+}
